--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,14 @@
     }
   },
   "rules": {
+/*     "no-unused-vars": "error", */
+    "no-unused-vars": [
+      2,
+      {
+        "args": "all",
+        "varsIgnorePattern": "^clo$|^timer$|^log|^JSP$"
+      }
+    ],
     "prefer-template": "warn",
     "eqeqeq": [
       "error",
@@ -57,7 +65,6 @@
     "no-var": "error",
     "prefer-const": "error",
     "no-prototype-builtins": "off",
-    "no-unused-vars": "error",
     "import/order": "error",
     "no-useless-escape": "off",
     "require-await": "error",
