--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "np.plugins",
   "packageName": "noteplan-cli",
   "info": "noteplan plugin development toolbox",
-  "version": "3.12.0",
+  "version": "3.13.0",
   "build": "031200",
   "description": "noteplan-cli",
   "repository": "https://github.com/NotePlan/plugins",
@@ -130,6 +130,7 @@
     "json5": "^2.2.0",
     "listr": "0.14.3",
     "lodash": "4.17.21",
+    "mathjs": "^11.0.1",
     "moment": "2.29.1",
     "moment-business-days": "1.2.0",
     "node-libcurl": "2.3.3",
