update scripts to help add react files to package

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "np.plugins",
   "packageName": "noteplan-cli",
   "info": "noteplan plugin development toolbox",
-  "version": "3.17.0",
+  "version": "3.18.0",
   "build": "031500",
   "description": "noteplan-cli",
   "repository": "https://github.com/NotePlan/plugins",
@@ -123,6 +123,7 @@
     "dayjs": "1.10.6",
     "documentation": "^13.2.5",
     "enquirer": "^2.3.6",
+    "fast-glob": "^3.2.12",
     "findup-sync": "4.0.0",
     "front-matter": "4.0.2",
     "fsevents": "^2.3.2",
