--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "@babel/parser": "^7.18.4",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-flow": "^7.13.13",
+    "@babel/preset-react": "^7.18.6",
+    "@rollup/plugin-alias": "^4.0.3",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "4.1.0",
@@ -111,9 +113,7 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@babel/preset-react": "^7.18.6",
     "@codedungeon/gunner": "0.77.0",
-    "@rollup/plugin-alias": "3.1.8",
     "@samverschueren/stream-to-observable": "0.3.1",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
