--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "flow-bin": "^0.179.0",
     "inquirer": "^8.1.0",
     "jest": "27.5.1",
+    "jest-silent-reporter": "^0.5.0",
     "jest-spec-reporter": "1.0.17",
     "mkdirp": "^1.0.4",
     "prettier": "^2.3.0",
