Make @nmn changes to workflow to enforce tests pass

--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
     "format": "prettier -w ./**/*.js ./**/**/*.js ./**/**/**/*.js",
     "typecheck": "flow check",
     "fix": "npm run lint-fix && npm run format",
-    "test": "npm run lint && npm run typecheck && run test:dev",
+    "test": "jest",
+    "test:compact": "jest **/*.test.js --reporters jest-silent-reporter --reporters ./jest.customSummaryReporter.js",
     "test:dev": "./node_modules/.bin/jest ./**/__tests__/*.test.js --silent",
     "test:watch": "./node_modules/.bin/jest ./**/__tests__/*.test.js --silent --watchAll",
     "security": "npm run security:high && npm run security:critical",
