tweak to actions

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -2,21 +2,31 @@
 # per: https://joelhooks.com/jest-and-github-actions/
 # also uses github-actions-reporter.js for reporting
 
-name: Tests CI
+name: Node.js CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Test using Node.js
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          node-version: '12'
-      - run: yarn install
-      - run: yarn test:ci
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
+      - run: npm install
+      - run: npm run test:ci
 
       - name: Tests ✅
         if: ${{ success() }}
