--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,10 +1,15 @@
 # Run tests on push or pull_request
 # per: https://joelhooks.com/jest-and-github-actions/
 # also uses github-actions-reporter.js for reporting
+# test github actions locally using act
 
 name: Node.js CI
 
 on:
+  workflow_dispatch:
+    inputs:
+      parameter:
+        description: Local testing
   push:
     branches: [ "main" ]
   pull_request:
@@ -15,7 +20,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [12.x, 14.x, 16.x]
+        node-version: [14.x, 16.x, 18.x, 19.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
