--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,7 +1,16 @@
 # Run tests on push or pull_request
 # per: https://joelhooks.com/jest-and-github-actions/
 # also uses github-actions-reporter.js for reporting
-# test github actions locally using act
+#
+# LOCAL ACTIONS TESTING NOTES:
+# test github actions locally using act https://github.com/nektos/act
+# first time install: brew install act
+# then just run `act` from the command line to test a push action
+# 
+# REMOTE NOTES (e.g. for after a push has been done and failed):
+# to see the results of the last github actions run (e.g. on push)
+# gh run view
+#   ... and select the latest run (and at the end it tells you how to see the detailed errors)
 
 name: Node.js CI
 
@@ -14,7 +23,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x, 19.x]
