switch entirely to ES6/ESM

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "info": "noteplan plugin development toolbox",
   "version": "3.18.0",
   "build": "031500",
+  "type": "module",
   "description": "noteplan-cli",
   "repository": "https://github.com/NotePlan/plugins",
   "contributors": [
@@ -50,36 +51,36 @@
     "tracking"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.2",
-    "@babel/eslint-parser": "^7.14.3",
-    "@babel/generator": "^7.18.2",
-    "@babel/parser": "^7.18.4",
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.0",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/generator": "^7.21.1",
+    "@babel/parser": "^7.21.2",
     "@babel/preset-env": "^7.20.2",
-    "@babel/preset-flow": "^7.13.13",
+    "@babel/preset-flow": "^7.18.6",
     "@babel/preset-react": "^7.18.6",
     "@rollup/plugin-alias": "^4.0.3",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-json": "4.1.0",
-    "@rollup/plugin-node-resolve": "13.0.4",
-    "concurrently": "^6.2.0",
-    "documentation": "^13.2.5",
-    "eslint": "^7.26.0",
-    "eslint-config-prettier": "^8.3.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.1",
+    "@rollup/plugin-json": "6.0.0",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "concurrently": "^7.6.0",
+    "documentation": "^14.0.1",
+    "eslint": "^8.35.0",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-flowtype": "^5.7.2",
-    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-no-floating-promise": "^1.0.2",
-    "eslint-plugin-unused-imports": "1.1.5",
-    "flow-bin": "^0.179.0",
-    "inquirer": "^8.1.0",
-    "jest": "27.5.1",
+    "eslint-plugin-unused-imports": "2.0.0",
+    "flow-bin": "^0.200.1",
+    "inquirer": "^9.1.4",
+    "jest": "29.4.3",
     "jest-silent-reporter": "^0.5.0",
-    "jest-spec-reporter": "1.0.17",
-    "mkdirp": "^1.0.4",
-    "prettier": "^2.3.0",
-    "rollup": "^2.48.0",
+    "jest-spec-reporter": "1.0.19",
+    "mkdirp": "^2.1.3",
+    "prettier": "^2.8.4",
+    "rollup": "^3.17.3",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.9.0",
@@ -117,40 +118,40 @@
     "singleQuote": true
   },
   "dependencies": {
-    "@codedungeon/gunner": "0.77.0",
+    "@codedungeon/gunner": "0.79.0",
     "@samverschueren/stream-to-observable": "0.3.1",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babelify": "^10.0.0",
-    "bcrypt": "5.0.1",
+    "bcrypt": "5.1.0",
     "bqpjs": "^0.1.1",
     "browserify": "^17.0.0",
     "bump-regex": "4.1.0",
     "chroma-js": "^2.4.2",
     "clipboardy": "3.0.0",
     "columnify": "^1.6.0",
-    "commander": "^8.1.0",
-    "contentful-html-rich-text-converter": "1.0.9",
-    "date-fns": "^2.23.0",
-    "dayjs": "1.10.6",
+    "commander": "^10.0.0",
+    "contentful-html-rich-text-converter": "1.0.11",
+    "date-fns": "^2.29.3",
+    "dayjs": "1.11.7",
     "enquirer": "^2.3.6",
     "fast-glob": "^3.2.12",
-    "findup-sync": "4.0.0",
+    "findup-sync": "5.0.0",
     "front-matter": "4.0.2",
     "fsevents": "^2.3.2",
-    "fuse.js": "^6.5.3",
+    "fuse.js": "^6.6.2",
     "git-state": "4.1.0",
     "html-minifier": "^4.0.0",
     "js-yaml": "^4.1.0",
-    "json5": "^2.2.0",
+    "json5": "^2.2.3",
     "listr": "0.14.3",
     "lodash": "4.17.21",
     "lodash-es": "^4.17.21",
-    "mathjs": "^11.0.1",
-    "moment": "2.29.1",
+    "mathjs": "^11.6.0",
+    "moment": "2.29.4",
     "moment-business-days": "1.2.0",
-    "node-libcurl": "2.3.4",
-    "node-notifier": "10.0.0",
+    "node-libcurl": "3.0.0",
+    "node-notifier": "10.0.1",
     "progress": "2.0.3",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
@@ -158,11 +159,11 @@
     "react-error-boundary": "^3.1.4",
     "react-loader-spinner": "^5.3.4",
     "react-select": "^5.7.0",
-    "rxjs": "6.6.7",
-    "showdown": "1.9.1",
+    "rxjs": "7.8.0",
+    "showdown": "2.1.0",
     "split": "1.0.1",
-    "sprintf-js": "1.0.3",
-    "strftime": "0.10.0",
+    "sprintf-js": "1.1.2",
+    "strftime": "0.10.1",
     "toml": "^3.0.0"
   }
 }
