--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-json": "6.0.0",
     "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.0",
     "concurrently": "^7.6.0",
     "documentation": "^14.0.1",
     "eslint": "^8.35.0",
@@ -81,8 +83,6 @@
     "mkdirp": "^2.1.3",
     "prettier": "^2.8.4",
     "rollup": "^3.17.3",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.9.0",
     "simple-input": "^1.0.1"
   },
