--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm ci --legacy-peer-deps
-      - run: npm run build
+      - run: node --max-old-space-size=8192 scripts/rollup.js -b -ci
       - run: npm run test:ci
 
       - name: Check for Test Passes ✅
