--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "mathjs": "^11.0.1",
     "moment": "2.29.1",
     "moment-business-days": "1.2.0",
+    "node-gyp": "^9.3.1",
     "node-libcurl": "2.3.4",
     "node-notifier": "10.0.0",
     "progress": "2.0.3",
