--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-no-floating-promise": "^1.0.2",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-unused-imports": "1.1.5",
     "flow-bin": "^0.179.0",
     "inquirer": "^8.1.0",
