add mermaid bundling, fix tests for presets

--- a/package.json
+++ b/package.json
@@ -149,6 +149,7 @@
     "lodash": "4.17.21",
     "lodash-es": "^4.17.21",
     "mathjs": "^11.0.1",
+    "mermaid": "^10.1.0",
     "moment": "2.29.1",
     "moment-business-days": "1.2.0",
     "node-gyp": "^9.3.1",
