--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "browserify": "^17.0.0",
     "bump-regex": "4.1.0",
     "chroma-js": "^2.4.2",
+    "chrono-node": "^2.6.3",
     "clipboardy": "3.0.0",
     "columnify": "^1.6.0",
     "commander": "^8.1.0",
