Add no-unused-var exclusion for 'res', often used with showMessage

--- a/.eslintrc
+++ b/.eslintrc
@@ -36,7 +36,7 @@
       2,
       {
         "args": "all",
-        "varsIgnorePattern": "^clo$|^timer$|^log|^JSP$|^clof$"
+        "varsIgnorePattern": "^clo$|^timer$|^log|^JSP$|^clof$|^res$"
       }
     ],
     "prefer-template": "warn",
