gitignore: add React bundle files + remove eslintrc and flowconfig

--- a/.gitignore
+++ b/.gitignore
@@ -20,5 +20,7 @@ coverage/
 docs/assets/
 docs/index.html
 Documentation-Helpers
-.eslintrc
-.flowconfig
+# .eslintrc
+# .flowconfig
+**/*.bundle.dev.js
+**/*.bundle.min.js
