--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "moment-business-days": "1.2.0",
     "node-gyp": "^9.3.1",
     "node-notifier": "10.0.0",
+    "plotly.js-dist-min": "^2.32.0",
     "progress": "2.0.3",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
