--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "mkdirp": "^1.0.4",
     "prettier": "^2.3.0",
     "rollup": "^2.48.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.9.0",
@@ -159,6 +160,7 @@
     "progress": "2.0.3",
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.3",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-loader-spinner": "^5.3.4",
