--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,7 @@
     }
   },
   "rules": {
-/*     "no-unused-vars": "warn", */
+    "react/prop-types": "off",
     "no-unused-vars": [
       1,
       {
