--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,13 +28,13 @@ jobs:
     strategy:
       matrix:
         # node-version: [14.x, 16.x, 18.x, 19.x]
-        node-version: [14.x]
+        node-version: [20.x,22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
@@ -43,7 +43,7 @@ jobs:
       - run: npm ci # clean install (deletes node_modules)
       - run: npm link # necessary for some reason specific to NP dev setup
       # note: when upgrade to node 16+, add this to the following --max-old-space-size=8192 
-      - run: npm run test:ci # run Jest CI version and stop if errors
+      - run: NODE_OPTIONS=--max-old-space-size=8192 npm run test:ci # run Jest CI version and stop if errors
 
       - name: Log Passing Tests ✅
         if: ${{ success() }}
@@ -81,9 +81,9 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
