--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -76,8 +76,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        # node-version: [14.x, 16.x, 18.x, 19.x]
-        node-version: [14.x]
+        node-version: [20.x,22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
