--- a/package.json
+++ b/package.json
@@ -58,11 +58,15 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-flow": "^7.13.13",
     "@babel/preset-react": "^7.18.6",
+    "@jest/test-sequencer": "^29.7.0",
     "@rollup/plugin-alias": "^4.0.3",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.0.4",
+    "@testing-library/jest-dom": "^6.6.2",
+    "@testing-library/react": "^16.0.1",
+    "babel-jest": "^29.7.0",
     "concurrently": "^6.2.0",
     "documentation": "^13.2.5",
     "eslint": "^7.26.0",
@@ -73,18 +77,25 @@
     "eslint-plugin-no-floating-promise": "^1.0.2",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-unused-imports": "1.1.5",
+    "identity-obj-proxy": "^3.0.0",
     "inquirer": "^8.1.0",
-    "jest": "27.5.1",
+    "jest": "^29.7.0",
+    "jest-config": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "jest-resolve": "^29.7.0",
     "jest-silent-reporter": "^0.5.0",
     "jest-spec-reporter": "1.0.17",
     "mkdirp": "^1.0.4",
+    "node-domexception": "^2.0.1",
     "prettier": "^2.3.0",
     "rollup": "^2.48.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.9.0",
-    "simple-input": "^1.0.1"
+    "simple-input": "^1.0.1",
+    "testing-library": "^0.0.2"
   },
   "scripts": {
     "init": "node ./tasks/init.js",
@@ -142,7 +153,6 @@
     "findup-sync": "4.0.0",
     "flow-bin": "^0.245.2",
     "front-matter": "4.0.2",
-    "fsevents": "^2.3.2",
     "fuse.js": "^6.5.3",
     "git-state": "4.1.0",
     "html-minifier": "^4.0.0",
