Add React testing library

--- a/package.json
+++ b/package.json
@@ -64,8 +64,12 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "13.0.4",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "babel-jest": "^29.7.0",
     "concurrently": "^6.2.0",
     "documentation": "^13.2.5",
@@ -170,7 +174,7 @@
     "node-notifier": "10.0.0",
     "plotly.js-dist-min": "^2.32.0",
     "progress": "2.0.3",
-    "react": "18.3",
+    "react": "^18.3.1",
     "react-data-table-component": "^7.5.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
