--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-import": "^2.23.2",
     "eslint-plugin-no-floating-promise": "^1.0.2",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-unused-imports": "1.1.5",
     "identity-obj-proxy": "^3.0.0",
@@ -92,7 +93,7 @@
     "jest-spec-reporter": "1.0.17",
     "mkdirp": "^1.0.4",
     "node-domexception": "^2.0.1",
-    "prettier": "^2.3.0",
+    "prettier": "^2.8.8",
     "rollup": "^2.48.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-replace": "^2.2.0",
