--- a/package.json
+++ b/package.json
@@ -181,6 +181,7 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
     "react-loader-spinner": "^5.3.4",
+    "react-resizable-panels": "^2.1.6",
     "react-select": "^5.8.0",
     "rxjs": "6.6.7",
     "showdown": "^1.9.1",
