--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@testing-library/react-hooks": "^8.0.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "concurrently": "^6.2.0",
     "documentation": "^13.2.5",
@@ -93,8 +94,12 @@
     "jest-spec-reporter": "1.0.17",
     "mkdirp": "^1.0.4",
     "node-domexception": "^2.0.1",
+    "postcss-calc": "^10.0.2",
+    "postcss-color-function": "^4.1.0",
+    "postcss-custom-properties": "^14.0.4",
+    "postcss-preset-env": "^10.1.1",
     "prettier": "^2.8.8",
-    "rollup": "^2.48.0",
+    "rollup": "^4.28.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2",
