--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,7 +40,7 @@ jobs:
           cache: 'npm'
       # shoulde eventually be a clean install using: - run: npm ci --legacy-peer-deps
       # - run: npm i -g node-gyp@latest && npm config set node_gyp "/usr/local/lib/node_modules/node-gyp/bin/node-gyp.js"
-      - run: npm ci # clean install (deletes node_modules)
+      - run: npm ci --legacy-peer-deps # clean install (deletes node_modules)
       - run: npm link # necessary for some reason specific to NP dev setup
       # note: when upgrade to node 16+, add this to the following --max-old-space-size=8192 
       - run: NODE_OPTIONS=--max-old-space-size=8192 npm run test:ci # run Jest CI version and stop if errors
@@ -88,7 +88,7 @@ jobs:
           cache: 'npm'
       # shoulde eventually be a clean install using: - run: npm ci --legacy-peer-deps
       # - run: npm i -g node-gyp@latest && npm config set node_gyp "/usr/local/lib/node_modules/node-gyp/bin/node-gyp.js"
-      - run: npm ci # clean install (deletes node_modules)
+      - run: npm ci --legacy-peer-deps # clean install (deletes node_modules)
       - run: npm link # necessary for some reason specific to NP dev setup
       # note: when upgrade to node 16+, add this to the following --max-old-space-size=8192 
       - run: NODE_OPTIONS=--max-old-space-size=8192 node scripts/rollup.js -b -ci # build all plugins and stop if errors
