--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "extends": [
     "eslint:recommended",
     "plugin:import/recommended",
-    "plugin:prettier/recommended",
+    // "plugin:prettier/recommended",
     "plugin:import/errors",
     "plugin:import/warnings",
     "plugin:flowtype/recommended",
@@ -10,7 +10,7 @@
     "plugin:react/recommended"
   ],
   "plugins": [
-    "prettier",
+    // "prettier",
     "import",
     "flowtype",
     "unused-imports",
