--- a/package.json
+++ b/package.json
@@ -93,14 +93,17 @@
     "jest-spec-reporter": "1.0.17",
     "mkdirp": "^1.0.4",
     "node-domexception": "^2.0.1",
+    "postcss": "^8.4.49",
     "postcss-calc": "^10.0.2",
     "postcss-color-function": "^4.1.0",
     "postcss-custom-properties": "^14.0.4",
+    "postcss-prefix-selector": "^2.1.0",
     "postcss-preset-env": "^10.1.1",
     "prettier": "^2.8.8",
     "rollup": "^4.28.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-styles": "^4.0.0",
     "rollup-plugin-visualizer": "^5.12.0",
     "simple-input": "^1.0.1",
     "testing-library": "^0.0.2"
@@ -186,10 +189,10 @@
     "plotly.js-dist-min": "^2.32.2",
     "progress": "2.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-circular-progressbar": "^2.1.0",
     "react-data-table-component": "^7.6.2",
     "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
     "react-loader-spinner": "^5.5.0",
     "react-resizable-panels": "^2.1.6",
