--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,5 @@ coverage/
 docs/assets/
 docs/index.html
 Documentation-Helpers
-**/*.bundle.dev.js
-**/*.bundle.min.js
-**/*.Root.dev.js
-**/*.Root.min.js
+**/react.*.dev.js
+**/react.*.min.js
