--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "autoprefixer": "^10.4.20",
     "babel-jest": "^29.7.0",
     "concurrently": "^6.2.0",
-    "documentation": "^13.2.5",
+    "documentation": "^14.0.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -138,7 +138,7 @@
     "security:critical": "npm audit | grep -B 1 -A 10 critical",
     "dev": "node ./tasks/start.js",
     "start": "node ./tasks/start.js",
-    "docs": "./node_modules/.bin/documentation build helpers/*.js -c docs/documentation.cfg.json -o docs -f html --shallow --document-exported --theme docs/theme; open docs/index.html",
+    "docs": "./node_modules/.bin/documentation build helpers/*.js -c docs/documentation.cfg.json -o docs -f html --shallow --document-exported --theme docs/custom_theme/index.js; open docs/index.html",
     "flow": "flow"
   },
   "prettier": {
@@ -202,6 +202,8 @@
     "split": "1.0.1",
     "sprintf-js": "1.0.3",
     "strftime": "0.10.0",
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "vinyl": "^3.0.0",
+    "vinyl-fs": "^4.0.0"
   }
 }
