--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,8 +27,8 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        # node-version: [14.x, 16.x, 18.x, 19.x]
-        node-version: [20.x,22.x]
+        # node-version: [14.x, 16.x, 18.x, 19.x, 20.x]
+        node-version: [22.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
